[project]
name = "BG360"
version = "0.1.7a"
description = "Load a 360 equirectangular image as a composited background behind Gaussian splats"
authors = [{name = "Brian Davis (bb6)"}]
dependencies = ["Pillow"]

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []
